fix vertical layout bug

--- a/client/app/components/taskbar/taskbar.component.scss
+++ b/client/app/components/taskbar/taskbar.component.scss
@@ -5,6 +5,7 @@
     position: absolute;
     height: 100%;
     display: flex;
+    flex-direction: column;
 }
 
 .dots {
